java-rancher/test-java-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: GRP-NAME-PRJ-COD-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: GRP-NAME-PRJ-COD
    spec:
      containers:
        - name: GRP-NAME-TKT-NUM
          image: REGISTRY_NAME/IMAGE_PROJECT/IMAGE_NAME:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
